--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
+  "name": "react-rn-library",
+  "type": "module",
+  "scripts": {
+    "build": "PLATFORM=web vite build && PLATFORM=native vite build"
+  },
+  "exports": {},
   "dependencies": {
     "react": "^18.2.0",
     "react-native": "^0.72.7",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@cross-platform-tools/vite-plugin": "^0.1.2",
     "@types/react": "^18.2.39",
-    "@types/react-native": "^0.72.7"
+    "@types/react-native": "^0.72.7",
+    "vite": "^4"
   }
 }
