--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-rn-library",
   "type": "module",
   "scripts": {
+    "postinstall": "npm run build",
     "build": "PLATFORM=web vite build && PLATFORM=native vite build"
   },
   "exports": {
@@ -15,7 +16,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@cross-platform-tools/vite-plugin": "^0.1.2",
+    "@cross-platform-tools/vite-plugin": "^0.1.4",
     "@types/react": "^18.2.39",
     "@types/react-native": "^0.72.7",
     "vite": "^5"
